重新从3复制过来

--- a/ocmoni5/html/s7Edit.html
+++ b/ocmoni5/html/s7Edit.html
@@ -55,11 +55,59 @@
 
 <!--主编辑区域 start-->
 <div class="container-fluid main_content">
+    <form class="form-horizontal">
+        <div class="edit_panel">
+            <div class="edit_panel_header">
+                <span class="title">1.选择附加服务</span>
+                <span class="serviceInputDiv">test</span><span class="text-info marginL15">必须选到最后一级</span>
+            </div>
+            <div class="edit_panel_body clearfix">
+                <div class="edit_panel_row">
+                    <span class="title">hello world</span>
+                    <span class="content">
+                        <p>1</p>
+                        <p>1</p>
+                        <p>1</p>
+                        <p>1</p>
+                        <p>1</p>
+                        <p>1</p>
+                    </span>
+                </div>
+            </div>
+        </div>
 
 
+        <div class="edit_panel">
+            <div class="edit_panel_header">
+                <span class="title">1.选择附加服务</span>
+                <span class="serviceInputDiv">test</span><span class="text-info marginL15">必须选到最后一级</span>
+            </div>
+            <div class="edit_panel_body clearfix">
+                <div class="edit_panel_row">
+                    <span class="title">hello world</span>
+                    <span class="content">
+                        <div class="well">
+                            <div class="row from_row">
+                                <label for="inputEmail3" class="edit_input_label control-label">Sector/Portion/Journey</label>
+                                <div class="col-sm-4">
+                                    <input type="email" class="form-control input-sm" id="inputEmail3" placeholder="Email">
+                                </div>
+                            </div>
 
+                            <div class="row from_row">
+                                <label for="inputPassword3" class="edit_input_label control-label">Password</label>
+                                <div class="col-sm-4">
+                                    <input type="password" class="form-control input-sm" id="inputPassword3" placeholder="Password">
+                                </div>
+                            </div>
 
+                        </div>
+                    </span>
+                </div>
 
+            </div>
+        </div>
+    </form>
 
 </div>
 <!--主编辑区域 end-->
