目录结构调整

--- a/ocmoni5/html/s7Edit.html
+++ b/ocmoni5/html/s7Edit.html
@@ -5,8 +5,8 @@
     <title>s7编译页面</title>
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css"/>
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="s7Edit.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/s7Edit.css">
 </head>
 <body>
 <!--导航 start-->
@@ -118,6 +118,6 @@
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap-datepicker/js/locales/bootstrap-datepicker.zh-CN.js"></script>
-<script type="text/javascript" src="s7Edit.js"></script>
+<script type="text/javascript" src="../js/s7Edit.js"></script>
 </body>
 </html>
