--- a/ocmoni5/html/s7Query.html
+++ b/ocmoni5/html/s7Query.html
@@ -5,8 +5,8 @@
     <title>s7编译页面</title>
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css"/>
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="s7Query.css"/>
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/s7Query.css"/>
 </head>
 <body>
 
@@ -300,6 +300,6 @@
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap-datepicker/js/locales/bootstrap-datepicker.zh-CN.js"></script>
-<script type="text/javascript" src="s7Query.js"></script>
+<script type="text/javascript" src="../js/s7Query.js"></script>
 </body>
 </html>
