--- a/ocmoni5/html/s7Edit.html
+++ b/ocmoni5/html/s7Edit.html
@@ -46,7 +46,6 @@
             <button type="submit" class="btn btn-default btn-sm">保存</button>
             <button type="submit" class="btn btn-default btn-sm btn-success">保存并发布</button>
         </span>
-        <span class="clearfix"></span>
     </div>
     <!--query section end-->
 </div>
@@ -79,12 +78,13 @@
 
         <div class="edit_panel">
             <div class="edit_panel_header">
-                <span class="title">1.选择附加服务</span>
-                <span class="serviceInputDiv">test</span><span class="text-info marginL15">必须选到最后一级</span>
+                <span class="title">2.确定费用</span>
+                <span>描述 | 费用</span>
             </div>
             <div class="edit_panel_body clearfix">
+
                 <div class="edit_panel_row">
-                    <span class="title">hello world</span>
+                    <span class="title">描述</span>
                     <span class="content">
                         <div class="well">
                             <div class="row from_row">
@@ -105,8 +105,41 @@
                     </span>
                 </div>
 
+                <div class="edit_panel_row">
+                    <span class="title">费用</span>
+                    <span class="content">
+                        <div class="well">
+                            <div class="from_row">
+                                <label for="inputEmail3" class="edit_input_label control-label">Sector/Portion/Journey</label>
+                                <div class="col-sm-4">
+                                    <input type="email" class="form-control input-sm"  placeholder="Email">
+                                </div>
+                            </div>
+
+                            <div class="from_row">
+                                <label for="inputPassword3" class="edit_input_label control-label">Password</label>
+                                <div class="col-sm-4">
+                                    <input type="password" class="form-control input-sm"  placeholder="Password">
+                                </div>
+                            </div>
+
+                            <div class="from_row">
+                                <label for="inputPassword3" class="edit_input_label control-label">Password</label>
+                                <div class="col-sm-4">
+                                    <input type="password" class="form-control input-sm"  placeholder="Password">
+                                </div>
+                            </div>
+
+                        </div>
+                    </span>
+                </div>
+
             </div>
         </div>
+
+
+
+
     </form>
 
 </div>
