--- a/ocmoni5/demo.html
+++ b/ocmoni5/demo.html
@@ -4,50 +4,53 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <style>
+        #main {
+            display: table;
+            border-collapse: collapse;
+        }
+        #nav {
+            display: table-cell;
+            width: 180px;
+            background-color: #e7dbcd;
+        }
+
+        #extras {
+            display: table-cell;
+            width: 180px;
+            padding-left: 10px;
+            border-right: 1px dotted #d7ad7b;
+        }
+
+        #content {
+            display: table-cell;
+            width: 380px;
+            padding-left: 10px;
+        }
+    </style>
 </head>
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Brand</a>
+<div id="wrapper">
+    <div id="main">
+        <div id="nav">
+            <p>nav sdfsfdsfdsdfsdfds</p>
+            <p>nav sdfsfdsfdsdfsdfds</p>
+            <p>nav sdfsfdsfdsdfsdfds</p>
+            <p>nav sdfsfdsfdsdfsdfds</p>
+            <p>nav sdfsfdsfdsdfsdfds</p>
+            <p>nav sdfsfdsfdsdfsdfds</p>
+            <p>nav sdfsfdsfdsdfsdfds</p>
+            <p>nav sdfsfdsfdsdfsdfds</p>
+
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">附加服务</a></li>
-                <li><a href="#">数据源配置</a></li>
-                <li><a href="#">里程积分兑换</a></li>
-                <li><a href="#">运价校验</a></li>
-                <li><a href="#">批量导入</a></li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-<div class="container-fluid" style="margin-top: 80px">
-    <!--<form class="form-inline">
-        <label class="checkbox">
-            <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
-        </label>
-    </form>-->
-
-
-    <input type="text"  class="input-sm">
-
+        <div id="extras">
+            extras
+        </div>
+        <div id="content">
+            content
+        </div>
+    </div>
 </div>
 
 
