--- a/ocmoni5/html/s7Edit2.html
+++ b/ocmoni5/html/s7Edit2.html
@@ -77,14 +77,14 @@
                 <span class="left">描述</span>
                 <span class="right">
                     <div class="pure-control-group">
-                        <label for="name">Username</label>
-                        <input id="name" type="text" placeholder="Username">
+                        <label>区域/部分/全程*</label>
+                        <input  type="text" class="pure-u-1-4 input-sm" placeholder="Username">
+                        <span class="pure-u-1-4" style=" padding-left:20px;vertical-align: middle; color: red">这里是错误提示</span>
                     </div>
-                    <div class="form-group">
-                      <label for="inputEmail3" class="pure-u-1-8 control-label">Email</label>
-                      <div class="pure-u-1-4">
-                          <input type="email" class="form-control input-sm" id="inputEmail3" placeholder="Email">
-                      </div>
+                    <div class="pure-control-group">
+                        <label>生效日期*</label>
+                        <input type="text" class="form-control input-sm datepicker"  placeholder="起始日期" style="width: 80px">
+                        <span class="pure-u-1-4" style=" padding-left:20px;vertical-align: middle; color: red">这里是错误提示</span>
                     </div>
                 </span>
             </div>
