日期控件加入测试

--- a/ocmoni5/html/s7Edit2.html
+++ b/ocmoni5/html/s7Edit2.html
@@ -57,18 +57,23 @@
 <!--主编辑区域 start-->
 <div class="container-fluid main_content">
     <form class="pure-form pure-form-aligned">
-        <div class="data_section">
+        <div class="data_section clearfix">
             <div class="title_layout">
                 <span class="left">1.选择附加服务</span>
                 <span class="serviceInputSpan right"></span>
             </div>
             <div class="content_layout">
-
+                <span class="left">描述</span>
+                 <span class="right">
+                     <div class="pure-control-group">
+                         <label>区域/部分/全程*</label>
+                        <input type="text" class="pure-u-1-4 input-sm datepicker"  placeholder="起始日期" >
+                     </div>
+                 </span>
             </div>
         </div>
 
-
-        <div class="data_section">
+        <div class="data_section ">
             <div class="title_layout">
                 <span class="left">2.确定费用</span>
                 <span class="right text-info"> 描述  | 费用 </span>
@@ -76,15 +81,13 @@
             <div class="content_layout">
                 <span class="left">描述</span>
                 <span class="right">
+                   <div class="pure-control-group">
+                       <label>区域/部分/全程*</label>
+                       <input type="text" class="pure-u-1-4 input-sm datepicker"  placeholder="起始日期" >
+                   </div>
                     <div class="pure-control-group">
                         <label>区域/部分/全程*</label>
-                        <input  type="text" class="pure-u-1-4 input-sm" placeholder="Username">
-                        <span class="pure-u-1-4" style=" padding-left:20px;vertical-align: middle; color: red">这里是错误提示</span>
-                    </div>
-                    <div class="pure-control-group">
-                        <label>生效日期*</label>
-                        <input type="text" class="form-control input-sm datepicker"  placeholder="起始日期" style="width: 80px">
-                        <span class="pure-u-1-4" style=" padding-left:20px;vertical-align: middle; color: red">这里是错误提示</span>
+                        <input type="text" class="pure-u-1-4 input-sm datepicker"  placeholder="起始日期" >
                     </div>
                 </span>
             </div>
