--- a/ocmoni5/html/s7Edit2.html
+++ b/ocmoni5/html/s7Edit2.html
@@ -63,13 +63,7 @@
                 <span class="serviceInputSpan right"></span>
             </div>
             <div class="content_layout">
-                <span class="left">描述</span>
-                 <span class="right">
-                     <div class="pure-control-group">
-                         <label>区域/部分/全程*</label>
-                        <input type="text" class="pure-u-1-4 input-sm datepicker"  placeholder="起始日期" >
-                     </div>
-                 </span>
+
             </div>
         </div>
 
@@ -82,12 +76,14 @@
                 <span class="left">描述</span>
                 <span class="right">
                    <div class="pure-control-group">
-                       <label>区域/部分/全程*</label>
+                       <label><i class="glyphicon glyphicon-asterisk red"></i>销售生效日期</label>
                        <input type="text" class="pure-u-1-4 input-sm datepicker"  placeholder="起始日期" >
+                       <span class="glyphicon glyphicon-th datebox"></span>
                    </div>
                     <div class="pure-control-group">
-                        <label>区域/部分/全程*</label>
+                        <label>销售截止日期</label>
                         <input type="text" class="pure-u-1-4 input-sm datepicker"  placeholder="起始日期" >
+                        <span class="glyphicon glyphicon-th datebox"></span>
                     </div>
                 </span>
             </div>
