--- a/ocmoni5/html/s7Edit4_bac.html
+++ b/ocmoni5/html/s7Edit4_bac.html
@@ -79,11 +79,10 @@
                 <span class="left">描述</span>
                 <span class="right">
                    <div class="form-group">
-                       <label for="inputEmail3" class="pure-u-1-8 control-label">起始日期</label>
+                       <label for="inputEmail3" class="pure-u-1-8 control-label">Email</label>
                        <div class="pure-u-1-4">
-                           <input type="email" class="form-control input-sm datepicker" id="inputEmail3" placeholder="Email">
+                           <input type="email" class="form-control input-sm" id="inputEmail3" placeholder="Email">
                        </div>
-                       <span class="glyphicon glyphicon-th datebox"></span>
                    </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">销售截止日期</label>
@@ -112,16 +111,12 @@
                         <div class="pure-u-1-4">
                             <input type="text" class="form-control input-sm"  >
                         </div>
-                        <span class="input_error_tip">这里是错误提示信息</span>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">是否检查库存</label>
                         <div class="pure-u-1-4" >
-                            <div class="radio-inline">
-                                <input type="radio" ><label>是</label>
-                            </div>
-                            <div class="radio-inline">
-                                <input type="radio" ><label>否</label>
+                            <div class="checkbox-inline">
+                                <input type="checkbox"><label> Remember me</label>
                             </div>
                         </div>
                     </div>
