--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -59,10 +59,59 @@
         <div class="data_section clearfix">
             <div class="title_layout">
                 <span class="left">1.选择附加服务</span>
-                <span class="serviceInputSpan right"></span>
+                <span style="margin-right:40px;"></span><span class="serviceInputSpan right"></span>
             </div>
             <div class="content_layout">
-
+                <!-- 附加服务选择框-->
+                <div class="service_choose_layout">
+                    <s><i></i></s>
+                    <div class="service_choose">
+                        <div class="choose_box">
+                            <div class="choose_box_title">
+                                <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
+                            </div>
+                            <div class="service_list">
+                                <ul>
+                                    <li>优选座位组描述F</li>
+                                    <li>1</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="choose_box choose_box_right">
+                            <div class="choose_box_title">
+                                <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
+                            </div>
+                            <div class="service_list">
+                                <ul>
+                                    <li>优选座位组描述F</li>
+                                    <li>1</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="choose_box choose_box_right">
+                            <div class="choose_box_title">
+                                <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
+                            </div>
+                            <div class="service_list">
+                                <ul>
+                                    <li>优选座位组描述F</li>
+                                    <li>1</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="choose_box choose_box_right">
+                            <div class="choose_box_title">
+                                <span class="text-info">服务详细</span>
+                            </div>
+                            <div class="service_list">
+                                <ul>
+                                    <li>优选座位组描述F</li>
+                                    <li>1</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
