第一版提交

--- a/ocmoni5/html/s7Edit4.html
+++ b/ocmoni5/html/s7Edit4.html
@@ -227,12 +227,11 @@
 
                      <div class="form-group">
                          <label  class="pure-u-1-8 control-label">里程兑换标识</label>
-                         <div class="pure-u-1-4">
-
+                         <div class="pure-u-1-2">
+                            <div class="radio-inline"><input type="radio" /><span>不兑换</span></div>
+                            <div class="radio-inline"><input type="radio" /><span>兑换，用里程支付</span></div>
+                            <div class="radio-inline"><input type="radio" /><span>兑换，用里程或金额支付</span></div>
                          </div>
-                         <input type="radio" /><span  class="radioLabel">不兑换</span>
-                         <input type="radio" /><span class="radioLabel">兑换，用里程支付</span>
-                         <input type="radio" /><span class="radioLabel">兑换，用里程或金额支付</span>
                      </div>
                      <div class="form-group">
                          <label  class="pure-u-1-8 control-label">里程费</label>
@@ -371,7 +370,7 @@
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">大客户/特殊客户</label>
-                        <div class="pure-u-1-2">
+                        <div class="pure-u-1-2 control_right_content">
                             <a href="">填写表格</a>
                             <div class="table_layout" style ="width:160px">
                                 <table>
@@ -380,7 +379,7 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td> <input type="text"></td>
+                                        <td> <input type="text" class="form-control input-sm"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -397,7 +396,7 @@
                 <span class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">发布对象</label>
-                        <div class="pure-u-1-2">
+                        <div class="pure-u-1-2 control_right_content">
                             <a href="">填写表格</a>
                             <div class="table_layout" style ="width:750px">
                                 <table>
@@ -415,14 +414,14 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td> <input type="text" style="width:93%;"></td>
-                                        <td> <input type="text" style="width:93%;"></td>
-                                        <td> <input type="text" style="width:93%;"></td>
-                                        <td> <input type="text" style="width:93%;"></td>
-                                        <td> <input type="text" style="width:93%;"></td>
-                                        <td> <input type="text" style="width:93%;"></td>
-                                        <td> <input type="text" style="width:93%;"></td>
-                                        <td> <input type="text" style="width:93%;"></td>
+                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
+                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
+                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
+                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
+                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
+                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
+                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
+                                        <td> <input type="text" class="form-control input-sm" style="width:93%;"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -629,7 +628,7 @@
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">航班号</label>
-                        <div class="pure-u-1-2">
+                        <div class="pure-u-1-2 control_right_content">
                             <a href="">填写表格</a>
                             <div class="table_layout" style ="width:160px">
                                 <table>
@@ -638,9 +637,9 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td> <input type="text"></td>
-                                        <td> <input type="text"></td>
-                                        <td> <input type="text"></td>
+                                        <td> <input type="text" class="form-control input-sm"></td>
+                                        <td> <input type="text" class="form-control input-sm"></td>
+                                        <td> <input type="text" class="form-control input-sm"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -659,7 +658,7 @@
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">定座属性表</label>
-                        <div class="pure-u-1-4">
+                        <div class="pure-u-1-4 control_right_content">
                             <a href="">填写表格</a>
                         </div>
                     </div>
@@ -708,7 +707,7 @@
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">兑换信息</label>
-                        <div class="pure-u-1-4">
+                        <div class="pure-u-1-4 control_right_content">
                             <a href="">填写表格</a>
                             <div class="table_layout" style="width: 950px"  >
                                 <table>
@@ -748,7 +747,7 @@
                                             </select><br/>
                                         <span >
                                             <input type ="text" style ="width:59px;" class ="form-control input-sm"/>
-                                            <select style ="width:60px;" class ="form-control input-sm">
+                                            <select style ="width:60px;" class ="">
                                                 <option value ="">选择</option>
                                                 <option value ="CNY">CNY</option>
                                                 <option value ="USD">USD</option>
@@ -789,7 +788,7 @@
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">TICKET DESIGNATOR</label>
-                        <div class="pure-u-1-4">
+                        <div class="pure-u-1-4 control_right_content">
                             <a href="">填写表格</a>
                         </div>
                     </div>
@@ -807,13 +806,13 @@
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">RESULTING TICKET DESIGNATOR </label>
-                        <div class="pure-u-1-4">
+                        <div class="pure-u-1-4 control_right_content">
                             <a href="">填写表格</a>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">客票舱位等级表 </label>
-                        <div class="pure-u-1-4">
+                        <div class="pure-u-1-4 control_right_content">
                             <a href="">填写表格</a>
                         </div>
                     </div>
